Integrate OneSignal for push notifications and update app identifiers. Remove Firebase dependencies and adjust WhatsApp service for phone number normalization.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,6 +51,7 @@
 	<string>Приложение использует местоположение для построения маршрутов к адресам доставки</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>whatsapp</string>
 		<string>comgooglemaps</string>
 		<string>yandexmaps</string>
 		<string>yandexnavi</string>
