--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,8 +62,7 @@ dependencies:
   image_picker: ^1.0.7
   
   # Notifications
-  firebase_messaging: ^14.7.10
-  firebase_core: ^2.24.2
+  onesignal_flutter: ^5.0.0
   
   # Utils
   crypto: ^3.0.3
